# gst-channelemulator

./: AUTHORS  ChangeLog  LICENSE  README  README.md  autogen.sh  configure.ac  gst-channelemulator.manifest
packaging/: gst-channelemulator.spec
src/: Makefile.am  gstchannelemulator.c  gstchannelemulator.h
